Refactor & test NETCommunications